# Glaubenskrieg

./: .dockerignore  .gitignore  Dockerfile  README.md  README.zh-CN.md  pyproject.toml  pytest.ini
Hoffnung/: CMakeLists.txt
Hoffnung/include/gbdt/: builder.h  config.h  gbdt.h  inference_engine.h  json_utils.h  tree.h
Hoffnung/python/gbdt/: __init__.py  losses.py  pipeline.py
Hoffnung/scripts/: run_tests.sh
Hoffnung/src/: builder.cpp  gbdt.cpp  inference_engine.cpp  python_bindings.cpp  tree.cpp
Hoffnung/tests/: test_basic.py  test_tree.cpp
configs/: default.yaml  execution_default.yaml  scale_large.yaml  scale_loop.yaml  scale_loop_large.yaml  scale_portfolio.yaml
data/us_stocks_full/: A.csv  AAPL.csv  ABBV.csv  ABT.csv  ACGL.csv  ACN.csv  ADBE.csv  ADI.csv  ADM.csv  ADP.csv  ADSK.csv  AEE.csv  AEP.csv  AES.csv  AFL.csv  AIG.csv  AIZ.csv  AJG.csv  AKAM.csv  ALB.csv  ALGN.csv  ALL.csv  ALLE.csv  ALNY.csv  AMAT.csv  AMCR.csv  AMD.csv  AME.csv  AMGN.csv  AMP.csv  AMT.csv  AMZN.csv  ANET.csv  AON.csv  AOS.csv  APA.csv  APD.csv  APH.csv  APO.csv  APTV.csv  (+437 more)
models/production/: feature_pipeline.json  lgb_w00.joblib  lgb_w01.joblib  lgb_w02.joblib  lgb_w03.joblib  lgb_w04.joblib  lgb_w05.joblib  lgb_w06.joblib  lgb_w07.joblib  lgb_w08.joblib  lgb_w09.joblib  production_lgb.joblib  production_metadata.json  production_ridge.joblib  ridge_w00.joblib  ridge_w01.joblib  ridge_w02.joblib  ridge_w03.joblib  ridge_w04.joblib  ridge_w05.joblib  ridge_w06.joblib  ridge_w07.joblib  ridge_w08.joblib  ridge_w09.joblib
results/: benchmark_ridge_glauben.json  diagnose_v2.json  glauben_v2_noise_free.json  newdata_baselines.json  permutation_test.json  pipeline_v2.json  pipeline_v3.json  power_analysis.json  us_full_baseline.json
scripts/: backtest.py  baseline_compare.py  benchmark_ridge_vs_glauben.py  diagnose_v2.py  download_nasdaq100.py  download_sp500.py  enhanced_features.py  garch_baseline.py  glauben_v2_noise_free.py  infer.py  infer_production.py  merge_stocks.py  pipeline_v2.py  pipeline_v3.py  portfolio_optimizer.py  synthetic_data.py  test_training.py  train.py  train_gbdt_only.py  train_production.py  train_volatility.py  verify_scales.py  volatility_backtest.py
src/data/: __init__.py  dataset.py  features.py  fractional_diff.py  gbdt_features.py  purged_walkforward.py  recency_norm.py  triple_barrier.py  wavelet_denoise.py
src/execution/: __init__.py  account.py  alpaca_broker.py  base_broker.py  config.py  order_manager.py
src/model/: __init__.py  ctm_model.py  ensemble.py  fused_attention.py  loop_ctm.py  losses.py  mamba_block.py  mamba_parallel.py  multiasset_ctm.py  time_gate.py
src/train/: __init__.py  _walk_forward_utils.py  advanced_trainer.py  curriculum.py  ensemble_trainer.py  loss_bridge.py  loss_gmadl.py  p3_trainer.py  trainer.py
tests/: conftest.py  test_data.py  test_ensemble.py  test_fused_attention.py  test_gbdt_features.py  test_gradient_check.py  test_loop_ctm.py  test_losses.py  test_model.py  test_p3_trainer.py  test_serialization.py  test_shap_explainer.py  test_time_gate.py  test_trainer.py
(+9 files in other folders)
